<resources>
    <string name="app_name">Shared_Preferences_Exercise_6</string>
    <string name="action_settings">Settings</string>
    <string name="textView1">Shared Preferences Demo App</string>
    <string name="textView2">Select machine configuration options:   </string>
    <string name="textView3">RAM size (GB):  </string>
    <string name="checkBox1">Graphics Coprocessor</string>
    <string name="checkBox2">Extended Memory</string>
    <string name="checkBox3">Touch screen input</string>
    <string name="checkBox4">High Speed Network Adaptor</string>
    <string name="editText1">2 </string>
    <string name="button1">save values</string>
    <string name="button2">exit app</string>
</resources>
